--- a/apps/pubspec.yaml
+++ b/apps/pubspec.yaml
@@ -16,30 +16,37 @@ dependencies:
   flutter_bloc: ^8.1.5
   hydrated_bloc: ^9.1.5
   equatable: ^2.0.5
-  freezed_annotation: ^2.2.0
+  freezed_annotation: ^2.4.4
   isar: ^3.1.0
-  isar_flutter_libs: ^3.1.0
+  isar_flutter_libs: ^3.1.0+1
   dio: ^5.6.0
   go_router: ^14.2.1
   google_fonts: ^6.2.1
   connectivity_plus: ^6.0.3
   path_provider: ^2.1.4
-  workmanager: ^0.5.2
+  workmanager: ^0.9.0+3
   intl: ^0.20.2
   cupertino_icons: ^1.0.8
   uuid: ^4.4.2
   flutter_secure_storage: ^9.2.2
+  package_info_plus: ^8.0.2
   hive: ^2.2.3
   hive_flutter: ^1.1.0
+  meta: ^1.12.0
+  image_picker: ^1.1.2
+  pdf: ^3.11.0
+  share_plus: ^12.0.0
+  printing: ^5.13.4
+  dynamic_color: ^1.6.9
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  build_runner: ^2.3.3
-  freezed: ^2.3.5
-  isar_generator: ^3.1.0+1
-  json_serializable: ^6.5.4
-  bloc_test: ^9.1.7
+  # Removed bloc_test due to SDK pin conflicts; using plain flutter_test + mocktail
+  build_runner: ^2.4.11
+  freezed: ^2.4.4
+  isar_generator: ^3.1.0
+  json_serializable: 6.6.2
   mocktail: ^1.0.3
   flutter_lints: ^5.0.0
 
@@ -47,8 +54,4 @@ flutter:
   uses-material-design: true
   generate: true
 
-dependency_overrides:
-  analyzer: '5.13.0'
-  build_resolvers: 2.4.2
-  dart_style: 2.3.6
-## dependency_overrides removed to avoid toolchain mismatches was a comment, removing it fully.
+## Removed dependency_overrides to avoid toolchain mismatches with Dart 3.9
