--- a/apps/pubspec.yaml
+++ b/apps/pubspec.yaml
@@ -22,6 +22,7 @@ dependencies:
   dio: ^5.6.0
   go_router: ^14.2.1
   google_fonts: ^6.2.1
+  flex_color_scheme: ^7.3.1
   connectivity_plus: ^6.0.3
   path_provider: ^2.1.4
   workmanager: ^0.9.0+3
@@ -38,11 +39,11 @@ dependencies:
   share_plus: ^12.0.0
   printing: ^5.13.4
   dynamic_color: ^1.6.9
+  url_launcher: ^6.3.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  # Removed bloc_test due to SDK pin conflicts; using plain flutter_test + mocktail
   build_runner: ^2.4.11
   freezed: ^2.4.4
   isar_generator: ^3.1.0
